# Signatrust

./: README.md
.github/workflows/: publish.yml
autogen-signatrust/: README.md  pyproject.toml
autogen-signatrust/autogen_signatrust/: __init__.py  tools.py
autogen-signatrust/examples/: example_agent.py
autogen-signatrust/tests/: test_tools.py
crewai-signatrust/: README.md  pyproject.toml
crewai-signatrust/crewai_signatrust/: __init__.py  tools.py
crewai-signatrust/examples/: example_crew.py
crewai-signatrust/tests/: test_tools.py
langchain-signatrust/: README.md  pyproject.toml
langchain-signatrust/examples/: example_agent.py
langchain-signatrust/langchain_signatrust/: __init__.py  tools.py
langchain-signatrust/tests/: test_tools.py
n8n-node/: .eslintrc.cjs  .npmignore  README.md  example-workflow.json  package-lock.json  package.json  tsconfig.json
n8n-node/credentials/: SignatrustApi.credentials.ts
n8n-node/nodes/Signatrust/: Signatrust.node.ts
n8n-node/scripts/: copy-icons.js
openai-agents-signatrust/: README.md  pyproject.toml
openai-agents-signatrust/examples/: example_agent.py
openai-agents-signatrust/openai_agents_signatrust/: __init__.py  client.py  tools.py
openai-agents-signatrust/tests/: test_tools.py
